--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,15 @@
 language: php
+
+php:
+  - "7.2"
+
 before_script:
-    - composer install
+  - cp .env.travis .env
+  - mysql -e 'create database db_test;'
+  - composer self-update
+  - composer install --no-interaction
+  - php artisan key:generate
+  - php artisan migrate
+
+script:
+  - vendor/bin/phpunit
