--- a/.env.travis
+++ b/.env.travis
@@ -3,7 +3,7 @@ APP_KEY=123asd123
 
 DB_CONNECTION=testing
 DB_TEST_USERNAME=root
-DB_TEST_PASSWORD=root
+DB_TEST_PASSWORD=
 
 CACHE_DRIVER=array
 SESSION_DRIVER=array
