--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
+        "bootstrap-vue": "^2.0.0-rc.11"
         "vue": "^2.5.7"
     },
     "dependencies": {
